test/configCases/validate/custom/errors.js
"use strict";

module.exports = [[/Validation failed/]];
