test/configCases/errors/depend-on-error/errors.js
module.exports = [[/Can't resolve '\.\/file-does-not-exist\.js'/]];
